# ftype-to-assessment

./: .gitignore  README.md  pyproject.toml
src/ftypeaa/: __init__.py  aatools.py
tests/: test_ftypeaa.py
