[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ftypeaa"
version = "0.0.1"
authors = [
  {name = "Peter Tittmann", email = "peter@arbos.bio"},
  {name = "Alec Trusty"},
]
description = "FIA forest type to ARB/CAR assessment area crosswalk"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "geopandas",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/peteWT/ftype-to-assessment"
"Bug Tracker" = "https://github.com/peteWT/ftype-to-assessment/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ftypeaa"]

[tool.hatch.build.targets.wheel.force-include]
"src/ftypeaa/data" = "ftypeaa/data"
